--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node Tests/test.js"
   },
-  "author": "",
+  "author": "ndr3w221 <kalaz.bb@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.4.2",
     "fs": "0.0.1-security"
-  }
+  },
+  "repository": "https://github.com/ndr3w221/hoku"
 }
